[package]
name = "search"
version = "0.1.0"
authors = ["LightDiscord <root@arnaud.sh>"]
edition = "2018"
description = "Let's search something!"
repository = "https://github.com/LightDiscord/Search"
license = "MIT"

[dependencies]
stdweb = "0.4.9"
serde = "1"
serde_derive = "1"

[dependencies.yew]
git = "https://github.com/DenisKolodin/yew.git"

[dependencies.rand]
git = "https://github.com/rust-lang-nursery/rand"
features = ["stdweb"]

[profile.release]
lto = true
debug = false
opt-level = 'z'
